# trading-AI

./: .env.example  LICENSE
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: create-commit.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/market/: __init__.py  factory.py  interface.py  massive.py  simulator.py  stream.py
backend/tests/: conftest.py  test_interface.py  test_massive.py  test_simulator.py
independent-reviewer/.claude-plugin/: plugin.json
independent-reviewer/.claude-plugin/hooks/: hooks.json
planning/: MARKET_INTERFACE.md  MARKET_SIMULATOR.md  MASSIVE_API.md  PLAN.md  REVIEW.md
